--- a/index.html
+++ b/index.html
@@ -31,6 +31,11 @@
         position: mapOptions.center
     });
     iwin.open(map);
+    var iwin = new google.maps.InfoWindow({
+        content: "Censored",
+        position: mapOptions.center
+    });
+    iwin.open(map);
         
     
   }
