--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
 <script type="text/javascript">
   function initialize() {
     var mapOptions = {
-      center: new google.maps.LatLng(-34.397, 150.644),
-      zoom: 8
+      center: new google.maps.LatLng(-25.045792,133.938446),
+      zoom: 5
     };
     var map = new google.maps.Map(document.getElementById("map-canvas"),
         mapOptions);
