--- a/index.html
+++ b/index.html
@@ -16,7 +16,12 @@
 <script type="text/javascript"
     src="https://maps.googleapis.com/maps/api/js?&sensor=true">
 </script>
+
+<script src="australiaOutline.js"></script>
+
 <script type="text/javascript">
+  
+
   function initialize() {
     var mapOptions = {
       center: new google.maps.LatLng(-34.397, 150.644),
@@ -24,8 +29,25 @@
     };
     var map = new google.maps.Map(document.getElementById("map-canvas"),
         mapOptions);
+
+    var australiaPath = getAustraliaOutline();
+
+    var australiaOutline = new google.maps.Polygon({
+      paths: australiaPath,
+      strokeColor: '#FF0000',
+      strokeOpacity: 0.8,
+      strokeWeight: 2,
+      fillColor: '#FF0000',
+      fillOpacity: 0.35
+    });
+    
+ 
+    australiaOutline.setMap(map);
+
   }
   google.maps.event.addDomListener(window, 'load', initialize);
 </script>
+
+
 </body>
 </html>
