--- a/index.html
+++ b/index.html
@@ -1,5 +1,9 @@
 <!DOCTYPE html>
 <html>
+
+<!-- gives us outlines -->
+<script src="outlines.js"></script>
+
 <head>
 <link rel="stylesheet" type="text/css" href="http://netdna.bootstrapcdn.com/bootstrap/3.0.3/css/bootstrap.min.css">
    <style type="text/css">
@@ -18,7 +22,6 @@
     src="https://maps.googleapis.com/maps/api/js?&sensor=true">
 </script>
 
-<script src="australiaOutline.js"></script>
 
 <script type="text/javascript">
   
