--- a/index.html
+++ b/index.html
@@ -44,10 +44,18 @@
       fillColor: '#FF0000',
       fillOpacity: 0.35
     });
-    
- 
     australiaOutline.setMap(map);
 
+    var nswPath = getNSWOutline();
+    var NSWOutline = new google.maps.Polygon({
+      paths: nswPath,
+      strokeColor: '#100000',
+      strokeOpacity: 0.8,
+      strokeWeight: 2,
+      fillColor: '#100000',
+      fillOpacity: 0.35
+    });
+    NSWOutline.setMap(map);
         
     var iwin = new google.maps.InfoWindow({
         content: "boobs",
